--- a/src/compomnents/LogoTitle/LogoTitle.css
+++ b/src/compomnents/LogoTitle/LogoTitle.css
@@ -1,6 +1,6 @@
 .logo-display {
-    width: 300px;
-    height: 120px;
+    width: 280px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,9 +17,11 @@
     justify-content: flex-start;
     align-items: center;
     border-radius: 12px;
+    color: #888;
 }
 
 .flashing-title {
+  color: #888;
   max-width: 130px;
   display: flex;
   justify-content: center;
