--- a/src/compomnents/Skills/Skills.css
+++ b/src/compomnents/Skills/Skills.css
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 0;
     margin-top: 0;
-    margin-bottom: 5rem;
+    margin-bottom: 35px;
 }
 .skills-grid {
     display: flex;
@@ -21,6 +21,7 @@
 
 .skill-item p {
     font-size: 20px;
+    margin-top: 0;
 }
 
   
