complete the styling for project page

--- a/src/compomnents/ProjectPage/ProjectPage.css
+++ b/src/compomnents/ProjectPage/ProjectPage.css
@@ -1,3 +1,45 @@
 .project-container {
-    padding: 60px 20%;
+    padding: 40px 20%;
+    display: flex;
+    justify-content: space-between;
+    color: #666;
+}
+
+.project-detail {
+    max-width: 48%;
+}
+
+.project-detail h1 {
+    font-size: 3rem;
+}
+
+.project-detail h1, h2, h4 {
+    color: #739aa6;
+}
+
+.project-detail a {
+    margin-right: 2rem;
+    color: #666;
+    font-size: 2rem;
+}
+
+.project-item {
+    margin-bottom: 12px;
+}
+
+.project-display {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 8.5rem;
+}
+
+.project-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.project-display button {
+    margin: 8px;
+
 }
