--- a/src/compomnents/Navbar/Navbar.css
+++ b/src/compomnents/Navbar/Navbar.css
@@ -1,6 +1,4 @@
 header {
-    
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,7 +12,7 @@ header {
 }
 
 .nav-links a {
-    color: #666;
+    color: #4b5563;
     text-decoration: none;
     font-size: 1.5rem;
 }
