--- a/src/compomnents/Footer/Footer.css
+++ b/src/compomnents/Footer/Footer.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
     background-color: #f9fafb;
     max-width: 48rem; 
     margin: 5rem auto; 
@@ -25,7 +25,7 @@ footer {
     display: flex;
     align-items: center;
     gap: 0.5rem; 
-   /*  background-color: #739aa6; */ 
+    background-color: #739aa6;
     color: #739aa6;
     padding: 0 1rem;
     border-radius: 0.5rem; 
@@ -40,4 +40,4 @@ footer {
   .contact-item a {
     color: inherit; 
     text-decoration: none;
-  }
+  } */
