--- a/src/compomnents/LogoTitle/LogoTitle.css
+++ b/src/compomnents/LogoTitle/LogoTitle.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid #739aa6;
+    border: 2px solid #7acf98;
     border-radius: 1rem;
     padding: 1rem;
     box-sizing: border-box;
@@ -17,11 +17,11 @@
     justify-content: flex-start;
     align-items: center;
     border-radius: 12px;
-    color: #888;
+    color: #7acf98;
 }
 
 .flashing-title {
-  color: #888;
+  color: #4b5563;
   max-width: 130px;
   display: flex;
   justify-content: center;
