--- a/src/compomnents/ProjectPage/ProjectPage.css
+++ b/src/compomnents/ProjectPage/ProjectPage.css
@@ -10,21 +10,21 @@
 }
 
 .project-detail h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
 }
 
-.project-detail h1, h2, h4 {
-    color: #739aa6;
+.project-detail h2, .project-detail h4 {
+    color: #7acf98;
 }
 
 .project-detail a {
     margin-right: 2rem;
     color: #4b5563;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .project-detail a:hover {
-    color: #739aa6
+    color: #7acf98
 }
 
 .project-item {
@@ -53,10 +53,10 @@
 .project-display button {
     margin: 8px;
     border: none;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #4b5563;
 }
 
 .project-display button:hover {
-    color: #739aa6;
+    color: #7acf98;
 }
