--- a/src/compomnents/ResumePage/ResumePage.css
+++ b/src/compomnents/ResumePage/ResumePage.css
@@ -15,7 +15,7 @@
   .resume-tab {
     background: none;
     border: none;
-    color: #888;
+    color: #4b5563;
     font-size: 1.2rem;
     text-align: left;
     cursor: pointer;
@@ -23,13 +23,13 @@
   }
   
   .resume-tab:hover {
-    color: #739aa6;
+    color: #7acf98;
   }
   
   .resume-tab.active {
-    color: #739aa6;
+    color: #7acf98;
     font-weight: 600;
-    border-left: 3px solid #739aa6;
+    border-left: 3px solid #7acf98;
     padding-left: 10px;
   }
   
@@ -38,6 +38,5 @@
     padding-left: 60px;
     font-size: 1rem;
     line-height: 1.8;
-    color: #666;
   }
   
