--- a/src/compomnents/Homepage/Homepage.css
+++ b/src/compomnents/Homepage/Homepage.css
@@ -51,6 +51,7 @@
   
   .download-btn:hover {
     color: #F1EEE9;
+    cursor: pointer;
   }
 
   .socials a:hover {
@@ -101,4 +102,35 @@
     font-size: 1.2rem;
     margin: 0;
     line-height: 1.2;
+}
+
+@media (min-width: 319px) and (max-width: 480px) {
+  .hero {
+    flex-direction: column;
+    padding: 5%;
+  }
+  .hero-left {
+    max-width: none;
+    width: 100%;
+  }
+  .intro, .description, .buttons {
+   margin-left: 20px;
+  }
+  .avatar {
+    width: 300px;
+    height: 300px;
+  }
+  .label {
+    flex-direction: column;
+}
+.label-detail {
+  margin-bottom: 15px;
+}
+}
+
+@media (min-width: 481px) and (max-width: 1200px) {
+  
+}
+@media (min-width: 1201px) and (max-width: 1600px) {
+  
 }
