--- a/src/compomnents/Navbar/Navbar.css
+++ b/src/compomnents/Navbar/Navbar.css
@@ -20,7 +20,7 @@ nav {
 }
 
 .nav-links a:hover, .nav-links a.active {
-    background-color: #7acf98;
+    background-color: #22c55e;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     padding: 5px;
     border-radius: 15px;
