--- a/src/compomnents/ContactPage/ContactPage.css
+++ b/src/compomnents/ContactPage/ContactPage.css
@@ -14,7 +14,7 @@
 }
 
 .contact-item:hover {
-    background-color: #7acf98;
+    background-color: #22c55e;
     border-radius: 15px;
     padding: 4px;
   }
@@ -22,4 +22,14 @@
   .contact-item a {
     color: #4b5563; 
     text-decoration: none;
+  }
+
+  @media (min-width: 319px) and (max-width: 480px) {
+    .contact {
+        padding: 10% 5%;
+    }
+    .contact-details {
+      flex-direction: column;
+      align-items: center;
+    }
   }
