--- a/src/compomnents/Education/Education.css
+++ b/src/compomnents/Education/Education.css
@@ -1,6 +1,7 @@
-.education h1 {
+.education-title {
     text-align: center;
     margin-bottom: 35px;
+    margin-top: 0;
 }
 
 .education-item {
@@ -32,4 +33,20 @@
     display: flex;
     flex-direction: column;
     align-items: end;
+}
+
+@media (min-width: 319px) and (max-width: 480px) {
+    .education-title {
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+    .education-item img{
+        display: none;
+    }
+    .education-col-one, .education-col-two {
+        font-size: 1rem;
+    }
+    .education-location {
+        text-align: end;
+    }
 }
