--- a/src/compomnents/Skills/Skills.css
+++ b/src/compomnents/Skills/Skills.css
@@ -1,9 +1,10 @@
-.skills h1 {
+.skills-title {
+    margin-bottom: 35px;
     text-align: center;
     padding: 0;
     margin-top: 0;
-    margin-bottom: 35px;
 }
+
 .skills-grid {
     display: flex;
     flex-wrap: wrap;
@@ -24,4 +25,13 @@
     margin-top: 0;
 }
 
-  
+@media (min-width: 319px) and (max-width: 480px) {
+    .skills-title {
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+    .skill-item {
+        margin: 0 1rem 0.5rem 0;
+        font-size: 40px;
+    }
+}
