--- a/src/compomnents/ProjectPage/ProjectPage.css
+++ b/src/compomnents/ProjectPage/ProjectPage.css
@@ -76,6 +76,17 @@
     background-color: #22c55e;
   }
 
+  .project-detail, .project-video {
+    opacity: 0;
+    transform: translateY(-8px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+  
+  .project-detail.active, .project-video.active {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
   @media (min-width: 319px) and (max-width: 480px) {
     .project-container {
         padding: 40px 5%;
