--- a/src/compomnents/Education/Education.css
+++ b/src/compomnents/Education/Education.css
@@ -50,3 +50,9 @@
         text-align: end;
     }
 }
+@media (min-width: 481px) and (max-width: 1200px) {
+    .education-title {
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+}
