--- a/src/compomnents/Experience/Experience.css
+++ b/src/compomnents/Experience/Experience.css
@@ -32,5 +32,10 @@
     margin-bottom: 15px;
     margin-top: 15px;
 }
-
+}
+@media (min-width: 481px) and (max-width: 1200px) {
+    .experience-title {
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
 }
