--- a/src/compomnents/Navbar/Navbar.css
+++ b/src/compomnents/Navbar/Navbar.css
@@ -40,5 +40,23 @@ nav {
     }
     .logo-title {
         order: 2;
-      }
+    }
+  }
+
+  @media (min-width: 481px) and (max-width: 1200px) {
+    nav {
+        padding: 0 5%;
+    }
+    .nav-links {
+        gap: 20px;
+        margin: 20px;
+    }
+  }
+  @media (min-width: 1201px) and (max-width: 1600px) {
+    nav {
+        padding: 0 10%;
+    }
+    .nav-links {
+        gap: 60px;
+    }
   }
