--- a/src/compomnents/ProjectPage/ProjectPage.css
+++ b/src/compomnents/ProjectPage/ProjectPage.css
@@ -52,17 +52,12 @@
 .pagination-dots {
     display: flex;
     gap: 8px;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
     margin-bottom: 1rem;
   }
-  .pagination-dots {
-    position: fixed;
-    bottom: 300px;
-    left: 45%;
-  }
-
+  
   .dot {
     width: 12px;
     height: 12px;
@@ -113,9 +108,8 @@
         margin-top: 1rem;
     }
     .pagination-dots {
-        position: fixed;
-        bottom: 10px;
-        left: 35%;
+        justify-content: center;
+        margin-top: 1rem;
       }
   }
   @media (min-width: 481px) and (max-width: 1200px) {
@@ -140,10 +134,6 @@
         margin-top: 1rem;
         margin-left: 4rem;
     }
-    .pagination-dots {
-        bottom: 200px;
-        left: 43%;
-      }
   }
   @media (min-width: 1201px) and (max-width: 1600px) {
     .project-container {
