--- a/src/compomnents/Homepage/Homepage.css
+++ b/src/compomnents/Homepage/Homepage.css
@@ -2,17 +2,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5% 20%;
+    padding: 2% 20%;
     box-sizing: border-box;
   }
   
   .hero-left {
     max-width: 45%;
+    border-radius: 16px;
   }
 
   .intro {
     font-size: 3rem;
     margin-bottom: 1rem;
+    font-size: 2.8rem;
+    font-weight: 700;
   }
   
   .highlight {
@@ -106,6 +109,10 @@
     font-size: 1.2rem;
     margin: 0;
     line-height: 1.2;
+}
+
+.skills {
+  padding: 0 20%;
 }
 
 @media (min-width: 319px) and (max-width: 480px) {
