--- a/src/compomnents/ResumePage/ResumePage.css
+++ b/src/compomnents/ResumePage/ResumePage.css
@@ -63,12 +63,14 @@
     .resume-sidebar {
       flex-direction: row;
       justify-content: center;
+      padding: 1.5rem 0;
     }
     .resume-tab.active {
       border-left: none;      
     }
     .resume-content {
       padding-left: 0;
+      padding: 0 1rem;
     }
   }
 
@@ -81,23 +83,28 @@
     .resume-sidebar {
       flex-direction: row;
       justify-content: center;
+      padding: 1.5rem 0;
     }
     .resume-tab.active {
-      border-left: none;      
+      border-left: none;  
+      font-size: 1.7rem;    
     }
     .resume-content {
       padding-left: 0;
+      padding: 0 1rem;
     }
     .resume-tab {
       font-size: 1.5rem;
     }
   }
+  
   @media (min-width: 1201px) and (max-width: 1600px) {
     .resume {
       padding: 5% 10%;
     }
     .resume-content {
       padding-left: 0;
+      padding: 0 1rem;
     }
     .resume-tab {
       font-size: 1.5rem;
