--- a/src/compomnents/ContactPage/ContactPage.css
+++ b/src/compomnents/ContactPage/ContactPage.css
@@ -6,22 +6,37 @@
     font-weight: 400;
 }
 
-.contact-details {
+.buttons.contact-page {
+  margin-top: 2rem;
+  justify-content: flex-end;
+}
+
+/* .contact-details {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     margin-top: 2rem;
     gap: 1rem
 }
 
-.contact-item:hover {
-    background-color: #22c55e;
-    border-radius: 15px;
-    padding: 4px;
+.contact-item {
+  display: flex;
+  background-color: #22c55e;
+  border-radius: 15px;
+  padding: 2px 4px;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
+.contact-item:hover, .contact-item a:hover {
+  transform: translateY(-2px);
   }
   
   .contact-item a {
     color: #4b5563; 
     text-decoration: none;
+    font-size: 1.5rem;
+  }
+  .contact-icon {
+    font-size: 1.5rem;
+    padding-right: 5px;
   }
 
   .contact-resumes {
@@ -43,7 +58,7 @@
   }
   .contact-resume-item img:hover {
     width: 61%;
-  }
+  } */
 
   @media (min-width: 319px) and (max-width: 480px) {
     .contact {
