--- a/src/compomnents/Experience/Experience.css
+++ b/src/compomnents/Experience/Experience.css
@@ -1,3 +1,8 @@
+.experience {
+    position: relative;
+    padding-left: 2rem;
+  }
+
 .experience-title {
     text-align: center;
     margin-bottom: 35px;
@@ -5,8 +10,36 @@
 }
 
 .experience-item {
+    position: relative;
     margin-bottom: 35px;
+    padding-left: 1.5rem;
 }
+
+.experience-item::before {
+    content: "";
+    position: absolute;
+    left: -8px;
+    top: 10px;
+    width: 12px;
+    height: 12px;
+    background-color: #22c55e;
+    border-radius: 50%;
+  }
+
+  /* grey line */
+  .experience-item::after {
+    content: "";
+    position: absolute;
+    left: -3px;
+    top: 35px;
+    width: 2px;
+    height: calc(100% - 10px);
+    background-color: #d9d9d9;
+    z-index: 0;
+  }
+  .experience-item:last-child::after {
+    display: none;
+  }
 
 .experience-line-one, .experience-line-two {
     display: flex;
@@ -17,10 +50,6 @@
 
 .experience-line-two {
     color: #22c55e;
-}
-
-.experience-details {
-    border-left: 3px solid #22c55e;
 }
 
 @media (min-width: 319px) and (max-width: 480px) {
