--- a/src/compomnents/Homepage/Homepage.css
+++ b/src/compomnents/Homepage/Homepage.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2% 20%;
+    padding: 0 20%;
     box-sizing: border-box;
   }
   
@@ -37,6 +37,11 @@
 
   .buttons a {
     text-decoration: none;
+    transition: color 0.3s ease, transform 0.2s ease;
+  }
+
+  .buttons a:hover {
+    transform: translateY(-2px);
   }
   
   .download-btn {
@@ -49,15 +54,16 @@
     font-size: 1.2rem;
   }
   
-  .socials a {
+  .socials {
     color: #4b5563;
     font-size: 1.5rem;
     margin-right: 1rem;
     text-decoration: none;
   }
 
-  .socials a:hover {
+  .socials:hover {
     color: #22c55e;
+    transform: translateY(-2px);
   }
 
   .download-btn:hover {
@@ -69,6 +75,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+ 
   }
   
  .avatar-border {
@@ -84,6 +91,7 @@
     width: 400px;
     height: 400px;
     border-radius: 50%;
+    padding-top: 35px;
   }
   
 .label {
