--- a/src/compomnents/ProjectPage/ProjectPage.css
+++ b/src/compomnents/ProjectPage/ProjectPage.css
@@ -6,34 +6,66 @@
 }
 
 .project-detail {
-    max-width: 48%;
-}
+    max-width: 46%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.2rem;
+  }
 
-.type {
+  .type {
     margin-left: 1rem;
-}
+    font-weight: 500;
+    color: #6b7280;
+  }
 
 .project-detail h1 {
-    font-size: 3.5rem;
-}
+    font-size: 3.4rem;      
+    font-weight: 800;      
+    /* color: #1f2937;    */      
+    letter-spacing: -0.5px;  
+    margin-bottom: 0.5rem;
+  }
 
-.project-detail h2, .project-detail h4 {
-    color: #22c55e;
-}
+  .project-detail h2 {
+    font-size: 1.6rem;      
+    font-weight: 700;
+    color: #22c55e;        
+    line-height: 1.4;
+    margin-bottom: 0.8rem;
+  }
 
-.project-detail a {
+  .project-detail h3 {
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+  }
+  .project-detail h3:last-of-type {
+    margin-top: 0.5rem;
+    font-weight: 600;
+  }
+  
+  .project-links {
+    display: flex;
+    margin-top: 0.8rem;
+  }
+  .project-links a {
     margin-right: 2rem;
     color: #4b5563;
-    font-size: 2.5rem;
-}
+    font-size: 3rem;
+    transition: color 0.3s ease, transform 0.2s ease;
+  }
 
-.project-detail a:hover {
-    color: #22c55e
-}
+  .project-links a:hover {
+    color: #22c55e;
+    transform: translateY(-2px);
+  }
 
 .project-item {
-    margin-bottom: 12px;
-}
+    margin-bottom: 10px;
+    font-size: 1.25rem; 
+    line-height: 1.8;
+  }
 
 .project-display {
     width: 50%;
@@ -61,6 +93,7 @@
     font-weight: 400;
     font-family: "Bitcount Grid Single", sans-serif;
     padding-right: 12rem;
+    margin-top: 0;
 }
 
 .green-arrow {
@@ -71,14 +104,36 @@
 
 .pagination-dots {
     display: flex;
-    gap: 8px;
+    gap: 2px;
     justify-content: end;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
   }
+
+  .leaf-icon {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+
+  .leaf {
+    width: 50px;
+    height: 50px;
+  }
   
-  .dot {
+  .leaf-icon:hover {
+    transform: scale(1.2) rotate(-8deg);
+    opacity: 0.9;
+  }
+  
+  .leaf-icon.active {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  
+/*   .dot {
     width: 40px;
     height: 6px;
     border-radius: 3px;
@@ -93,7 +148,7 @@
   .dot.active {
     width: 60px;
     background-color: #22c55e;
-  }
+  } */
 
   .project-detail, .project-video, .project-actions {
     opacity: 0;
