--- a/src/compomnents/Skills/Skills.css
+++ b/src/compomnents/Skills/Skills.css
@@ -1,16 +1,29 @@
-/* .skills-title {
-    margin-bottom: 35px;
-    text-align: left;
-    font-size: 2rem;
-    font-weight: 700;
-    color: #1a1a1a;
-  } */
+.skills-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
   
+.skills-category {
+  width: 100%;
+  padding: 0 2.5rem;
+}
+
   .skills-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 2rem;
-    margin-top: 1rem;
+    gap: 1rem;
+    justify-items: center;
+  }
+
+  .skills-title {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: #22c55e;
+  text-align: left;
+  margin-bottom: 1.5rem;
+  padding-left: 10px;
+  letter-spacing: 0.5px;
   }
   
   .skill-item {
@@ -29,11 +42,16 @@
     text-align: left;
     font-size: 17px;
     font-weight: 500;
-    margin-top: 0.3rem;
+    margin-top: 0.1rem;
     color: #333;
   }
   
-  .skill-item:hover {
+  .skill-item.soft p {
+    margin-left: 10%;
+    font-size: 21px;
+  }
+  
+  .skill-item:hover, .skill-item.soft p:hover {
     transform: translateY(-4px);
     color: #22c55e;
   }
