--- a/src/compomnents/BioPage/BioPage.css
+++ b/src/compomnents/BioPage/BioPage.css
@@ -1,8 +1,8 @@
-.bio {
+.bio-page {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 60px 20%;
+  padding: 60px 10% 0 20%;
 }
 
 .bio-sidebar {
@@ -12,6 +12,7 @@
   width: 200px;
   padding-left: 2rem;
   padding-top: 1.5rem;
+  margin-right: -7rem;
   flex: 0.8
 }
 
@@ -37,75 +38,27 @@
     font-size: 1.3rem;
 }
 
-.about-me {
+.bio-content {
   flex: 2;
-  padding-left: 60px;
   font-size: 1rem;
   line-height: 1.8;
   opacity: 0;
-  transform: translateY(-8px);
+  transform: translateY(-2px);
   transition: opacity 0.5s ease, transform 0.5s ease;
-  border-radius: 12px;
-  padding: 2rem;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
 
-.about-me.active {
+.bio-content.active {
   opacity: 1;
   transform: translateY(0);
 }
-
-.about-me-title {
-    text-align: center;
-    margin-bottom: 35px;
-    margin-top: 0;
-}
-
-.about-me-item {
-    margin-bottom: 15px;
-}
-
-.about-me-item::first-letter {
-  font-size: 2.5rem;
-  font-weight: 700;
-  color: #22c55e;
-  float: left;
-  margin-right: 0.4rem;
-  line-height: 1;
-  font-family: "Playfair Display", serif;
-}
-
-.about-me-description {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.about-me video {
-    width: 100%;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    object-fit: cover;
-}
-
-  .about-me {
-    opacity: 0;
-    transform: translateY(-8px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
-  
-  .about-me.active {
-    opacity: 1;
-    transform: translateY(0);
-  }
   
 @media (min-width: 319px) and (max-width: 480px) {
-  .bio {
+  .bio-page {
     flex-direction: column;
     padding: 10% 5%;
     align-items: center;
   }
-    .about-me-title {
+    .bio-title {
         margin-bottom: 15px;
         margin-top: 15px;
     }
@@ -116,10 +69,10 @@
     }
 }
 @media (min-width: 481px) and (max-width: 1200px) {
-  .bio {
+  .bio-page {
     padding: 5%;
   }
-  .about-me-title {
+  .biotitle {
       margin-bottom: 15px;
       margin-top: 15px;
   }
@@ -130,7 +83,7 @@
 }
 
 @media (min-width: 1201px) and (max-width: 1600px) {
-  .bio {
+  .bio-page {
     padding: 5% 9%;
   }
 }
