--- a/src/compomnents/Homepage/Homepage.css
+++ b/src/compomnents/Homepage/Homepage.css
@@ -9,6 +9,7 @@
   .hero-left {
     max-width: 45%;
     border-radius: 16px;
+    padding-left: 1%;
   }
 
   .intro {
@@ -23,8 +24,9 @@
   }
   
   .description {
-    color: #4b5563;
-    font-size: 1.5rem;
+    padding-left: 2%;
+    color: #6d7074;
+    font-size: 1.3rem;
     line-height: 1.6;
     margin-bottom: 2rem;
   }
@@ -75,7 +77,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
- 
+    padding-right: %;
   }
   
  .avatar-border {
