--- a/src/compomnents/Navbar/Navbar.css
+++ b/src/compomnents/Navbar/Navbar.css
@@ -17,14 +17,21 @@ nav {
     color: #4b5563;
     text-decoration: none;
     font-size: 1.5rem;
-    transition: color 0.3s ease, transform 0.2s ease;
+    transition: color 0.3s ease, transform 0.3s ease;
+    padding: 0.4rem;
 }
 
-.nav-links a:hover, .nav-links a.active {
+.nav-links a:hover {
     background-color: #22c55e;
     transform: translateY(-2px);
     border-radius: 15px;
-    padding: 4px 0;
+    color: #F1EEE9;
+}
+
+.nav-links a.active {
+    background-color: #22c55e;
+    border-radius: 15px;
+    color: #F1EEE9;
 }
 
 .logo-title {
