--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Rubik", sans-serif;
     background-color: #F1EEE9;
+    /* background-color: #f1e6db; */
     color: #4b5563;
 }
