--- a/src/compomnents/TruthsLies/TruthsLies.css
+++ b/src/compomnents/TruthsLies/TruthsLies.css
@@ -39,6 +39,7 @@
     cursor: pointer;
     text-align: center;
     transition: transform 0.3s ease;
+    color: #1e293b;
   } 
 
   /* text position */
